cmake_minimum_required(VERSION 3.29)
project(Fernandez_Encina_ExamenCPP_zip)

set(CMAKE_CXX_STANDARD 20)

add_executable(Fernandez_Encina_ExamenCPP_zip_Ejercicio1
        "Ejercicio1/main.cpp"
        Ejercicio1/main.cpp
)
add_executable(Fernandez_Encina_ExamenCPP_zip_Ejercicio2
        "Ejercicio2/main.cpp"
)
add_executable(Fernandez_Encina_ExamenCPP_zip_Ejercicio3
        "Ejercicio3/main.cpp"
)
add_executable(Fernandez_Encina_ExamenCPP_zip_Ejercicio4
        "Ejercicio4/main.cpp"
)
